# etl-weather-data

./: .gitignore  README.md  pyproject.toml  run_etl.sh
etl_weather_data/: etl_script.py  etl_weather.py
